# gmail-triage

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  mailtriage-spec.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 4ed436dc1622_feedback_consolidated_proposal_ids.py  a1b2c3d4e5f6_default_rule.py  a3b4c5d6e7f8_digest_mode_threshold.py  a8f28ca13ed0_labels_entity.py  b1c2d3e4f5a6_seed_prompt_defaults.py  b25619e5e161_initial_schema.py  b7e1c9d2f4a3_email_summary_drop_digest_depth.py  bc67c32f9a96_per_rule_dry_run.py  c2d3e4f5a6b7_update_synthesis_prompt_default.py  c3a7f1e9d8b2_perf_indexes.py  c7f3a9b2e541_system_labels.py  cdfd1c611254_digest_send_no_news.py  d4e7f1a09b32_processing_status.py  d5b8a2c1e6f4_drop_write_only_email_columns.py  e1c2f3a4b5d6_email_attempts.py  e9f1a2b3c4d5_system_label_colors.py  f2d3e4a5b6c7_digest_depth.py  f3a8c1d2e9b4_gmail_watch_expiration.py
backend/app/: auth.py  config.py  db.py  logging_setup.py  main.py  models.py  state.py
backend/app/api/: admin_routes.py  auth_routes.py  category_routes.py  digest_routes.py  (+9 more)
backend/scripts/: llm_smoke.py  migrate_sqlite_to_pg.py
backend/tests/: conftest.py  test_admin_purge.py  test_auth_password.py  test_db_locking.py  test_labels.py  test_m0_scaffolding.py  test_m1_gmail.py  test_m2_classification.py  test_m3_rules.py  test_m4_ui_api.py  test_m5_digests.py  test_m6_feedback.py  test_m7_hardening.py  test_pg_migration.py  test_pubsub.py  test_recovery.py  test_retention.py
(+52 files in other folders)
